# TTS-Gateway

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  env.example  kokoro-integration-example.json  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yml
docs/: architecture.md
examples/: basic_usage.py
examples/curl/: tts.sh
examples/texts/: long.txt
scripts/: dev.sh  lint.sh  setup_kokoro.py
src/tts_gateway/: app.py  cli.py
src/tts_gateway/api/: __init__.py  deps.py  router.py
src/tts_gateway/api/v1/: __init__.py  routes_health.py  routes_tts.py
src/tts_gateway/core/: __init__.py  config.py  models.py
src/tts_gateway/providers/: __init__.py  base.py  kokoro.py  mock.py
tests/integration/: test_api_tts.py
tests/unit/: test_providers_kokoro.py  test_providers_mock.py
