[project]
name = "tts-gateway"
version = "0.1.0"
description = "A pluggable Text-to-Speech API gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "black",
  "httpx",
  "requests",
]
kokoro = [
  "kokoro-onnx>=0.4.9",
]

[project.scripts]
tts-gateway = "tts_gateway.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "kokoro_onnx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kokoro_onnx.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=tts_gateway --cov-report=term-missing"

[coverage.run]
source = ["src"]
omit = ["**/__init__.py"]

[coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
